spring-project/main/simple_spring_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-graal
  labels:
    app: spring-graal
spec:
  selector:
    matchLabels:
      app: spring-graal
  template:
    metadata:
      labels:
        app: spring-graal
      annotations:                  
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"   
        prometheus.io/path: "/actuator/prometheus" 
    spec:
      containers:
        - name: spring-graal
          image: nazmul4532brainstation/springboot-graal:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts: 
            - mountPath: /data  
              name: spring-graal-storage  
      volumes:  
        - name: spring-graal-storage
          persistentVolumeClaim:
            claimName: spring-graal-pvc 
---
apiVersion: v1
kind: Service
metadata:
  name: spring-graal
  labels:
    app: spring-graal
  annotations:                    
    prometheus.io/discover: "true" 
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"   
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spring-graal
