spring-project/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: spring-graal-ingress
spec:
  rules:
    - host: graal-boot.local.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-graal-app
                port:
                  number: 8080
